# thrifty-ml

./: .gitignore  CLAUDE.md  Design.md  LICENSE  README.md  pyproject.toml
.github/actions/uv_setup/: action.yml
.github/workflows/: release.yml
benchmarks/imdb/: README.md  data.py  instrumentation.py  run.py
examples/: reviews.csv
src/frugal_ml/: __init__.py  cache.py  cli.py  embeddings.py  engine.py  evaluator.py  llm.py  sampling.py
src/frugal_ml/proxy/: base.py  linear.py  trees.py
src/thrifty_ml/: __init__.py  _utils.py  cache.py  cli.py  embeddings.py  engine.py  evaluator.py  llm.py
src/thrifty_ml/proxy/: linear.py  trees.py
tests/: test_cli.py  test_engine.py  test_engine_integration.py  test_imdb_benchmark.py  test_proxies.py  test_sampling.py
