[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frugal-ml"
version = "0.1.0"
description = "Proxy-model library: replace per-row LLM calls with lightweight ML classifiers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "diskcache>=5.6.0",
    "typer>=0.12.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.3.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "lightgbm>=4.3.0",
]

[project.scripts]
frugal-ml = "frugal_ml.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/frugal_ml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires real API keys, not run in CI"]

[tool.hatch.build]
sources = ["src"]
