[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thrifty-ml"
version = "0.1.0"
description = "Proxy-model library: replace per-row LLM calls with lightweight ML classifiers"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Derrick Kondo" },
]
requires-python = ">=3.10"
keywords = ["llm", "machine-learning", "proxy-model", "classification", "cost-reduction", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm>=1.40.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "diskcache>=5.6.0",
    "typer>=0.12.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.3.0"]
benchmark = ["datasets>=2.16.0", "pyarrow>=14.0.0", "tqdm>=4.66.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "lightgbm>=4.3.0",
]

[project.urls]
Homepage = "https://github.com/dkondo/thrifty-ml"
Repository = "https://github.com/dkondo/thrifty-ml"

[project.scripts]
thrifty-ml = "thrifty_ml.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/thrifty_ml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires real API keys, not run in CI"]

[tool.hatch.build]
sources = ["src"]
